--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "4.x",
+    "file-saver": "^2.0.5",
+    "html2canvas": "^1.4.1",
     "lodash-es": "^4.17.21",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
