Updated # editable 속성 추가

--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "html2canvas": "^1.4.1",
     "lodash-es": "^4.17.21",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue3-perfect-scrollbar": "^2.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
+    "@types/file-saver": "^2.0.7",
     "@types/lodash": "^4.17.7",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
